# Cohab

./: .env  .gitignore  .railwayignore  CHORE_API_REFERENCE.md  EXPENSE_FEATURES_ADDED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PAYMENT_INTEGRATION.md  PAYMENT_SETUP.md  QUICK_START_PAYMENTS.md  README-SETUP.md  README.md  app.json  package-lock.json  package.json  railway.json
backend/: .env  .env.example  .railwayignore  Dockerfile  api.py  docker-compose.yml  pyproject.toml  railway.json
backend/app/graphql/: __init__.py  context.py  info.py  schema.py
backend/app/graphql/routes/: __init__.py
backend/app/graphql/routes/chore/: __init__.py  inputs.py
backend/app/graphql/routes/expense/: __init__.py  inputs.py  mutations.py  queries.py  schema.py
backend/app/graphql/routes/households/: __init__.py  inputs.py
backend/app/graphql/routes/message/: __init__.py  inputs.py  mutations.py  queries.py  schema.py
backend/app/graphql/routes/notification/: __init__.py  inputs.py  mutations.py  queries.py  schema.py
backend/app/graphql/routes/profile/: __init__.py  inputs.py  mutations.py  queries.py  schema.py
backend/app/graphql/routes/room/: __init__.py  inputs.py  mutations.py  queries.py  schema.py
backend/app/graphql/types/: __init__.py  chore.py  expense.py  household.py  jwt_payload.py  message.py  notification.py  profile.py  room.py  roommate.py
backend/app/graphql/utils/: field_selectors.py  parsers.py
backend/app/supabase/: config.py
backend/app/supabase/utils/: auth.py  client.py
backend/app/utils/: payment_urls.py
database/: quick-verify.sql  (+2 more)
(+121 files in other folders)
