[project]
name = "cohab-backend"
version = "1.0.0"
description = "Backend API for Cohab roommate management app"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "supabase==2.0.0",
    "pydantic==2.5.0",
    "httpx>=0.24.0,<0.25.0",  # Compatible with supabase
]